2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* nodes.c (get_filename_and_nodename): New static function setting
	defaults for node specifications.
	(info_get_node, info_get_node_with_defaults): New argument 'window'
	for info_get_node.  Function renamed, with wrapper with old arguments.
	Call get_filename_and_nodename.
	(info_get_node_of_file_buffer): Remove unnecessary check for null
	nodename - done by calling code.

	* session.c (info_select_reference): Call info_get_node_with_defaults.
	(info_parse_and_select): Do not call info_parse_node.

2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c: Reorder file into sections.  No functional changes.

2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/file.sh, info/t/file-node.sh, info/t/dir.sh,
	info/t/dir-to-file.sh, info/t/dir-to-no-file.sh,
	info/t/dir-file-menu.sh, info/t/dir-file-no-menu.sh,
	info/t/dir-3-menus.sh, info/t/tab.sh, info/t/index.sh,
	info/t/help.sh: Copyright notices added.

	* info/t/index.sh: Source t/Cleanup.inc.

2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/texi2dvi (runbibtex): Avoid having two opening brackets
	in a row to improve portability of code.  Reported by Richard
	Palo.  (http://savannah.gnu.org/bugs/?42067)

2014-04-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-intera.inc: New file for interactive tests.  Wait
	for file containing name of pseudoterminal to be created by
	subprocess.
	* info/t/Cleanup.inc: File created: shell code for test cleanup
	and exit.
	* info/t/index.sh, info/t/tab.sh: Source new files.
	* info/t/Init-test.inc: Record that test isn't interactive to allow
	Cleanup.inc to be used for both kinds of tests.
	* info/pseudotty.c: Call fclose on stdout instead of fflush to
	encourage output file to be created quickly.

2014-04-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/Makefile.am: Rules and variables for test suite.
	* info/pseudotty.c: New program, used by tests.